istio-cop/1-start-istio/sample-apps/recommendation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
  labels:
    app: recommendation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
      version: v1
  template:
    metadata:
      labels:
        app: recommendation
        version: v1
      annotations:
    spec:
      serviceAccountName: recommendation
      containers:
        - name: recommendation
          image: nicholasjackson/fake-service:v0.7.8
          ports:
            - containerPort: 8080
---
# Service to expose recommendation frontend

apiVersion: v1
kind: Service
metadata:
  name: recommendation
spec:
  selector:
    app: recommendation
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
