istio-cop/1-start-istio/sample-apps/web-api.yaml
# Service descriptor to expose web frontend
apiVersion: v1
kind: Service
metadata:
  name: web-api
spec:
  selector:
    app: web-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8081
---
# Deployment descriptor for web-api
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api
  labels:
    app: web-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-api
      version: v1
  template:
    metadata:
      labels:
        app: web-api
        version: v1
      annotations:
    spec:
      serviceAccountName: web-api
      containers:
        - name: web-api
          image: nicholasjackson/fake-service:v0.7.8
          ports:
            - containerPort: 8081
