istio-cop/1-start-istio/sample-apps/web-api-elephant-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-api-gw-elephant-vs
spec:
  hosts:
  - "elephant.io"
  gateways:
  - web-api-gateway
  http:
  - route:
    - destination:
        host: web-api.elephant.svc.cluster.local
        port:
          number: 8080
